@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="main" class="edu.mcw.rgd.Main">
-        <property name="version" value="Cellosaurus pipeline -- build Feb 21, 2022" />
+        <property name="version" value="Cellosaurus pipeline -- build Apr 06, 2022" />
         <property name="sourcePipeline" value="CELLOSAURUS" />
         <property name="oboFile" value="ftp://ftp.expasy.org/databases/cellosaurus/cellosaurus.obo"/>
         <property name="parser" ref="parser"/>
@@ -150,6 +150,8 @@
                 <entry key="PerkinElmer" value="133"/>
                 <entry key="SLKBase" value="134"/>
                 <entry key="EGA" value="135"/>
+                <entry key="Rockland" value="136"/>
+                <entry key="Innoprot" value="137"/>
             </map>
         </property>
     </bean>
